Updates & delete confirmation removed

--- a/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_client_affine_subscription.yaml
+++ b/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_client_affine_subscription.yaml
@@ -368,7 +368,7 @@ interactions:
       Content-Length:
       - '0'
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: DELETE
@@ -415,7 +415,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -460,7 +460,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -505,7 +505,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -550,7 +550,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
