--- a/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_migration.yaml
+++ b/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_migration.yaml
@@ -2653,7 +2653,7 @@ interactions:
       Content-Length:
       - '0'
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: DELETE
@@ -2700,7 +2700,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
