--- a/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_premium_queue.yaml
+++ b/src/azure-cli/azure/cli/command_modules/servicebus/tests/latest/recordings/test_sb_premium_queue.yaml
@@ -527,7 +527,7 @@ interactions:
       Content-Length:
       - '0'
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: DELETE
@@ -574,7 +574,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -619,7 +619,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -664,7 +664,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --name --yes
+      - --resource-group --name
       User-Agent:
       - AZURECLI/2.44.1 (AAZ) azsdk-python-core/1.24.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
     method: GET
