--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -472,7 +472,7 @@ jobs:
         # pip install -e azure-cli-dev-tools
         pip install pytest-json-report
         pip install pytest-html
-        pip install pytest-rerunfailures==11.0
+        pip install pytest-rerunfailures
 
         azdev setup -c azure-cli -r azure-cli-extensions
 
