--- a/.github/azure-client-tools-bot/config.yml
+++ b/.github/azure-client-tools-bot/config.yml
@@ -8,10 +8,11 @@ pull_request:
         - "Module"
         - "Profile"
         - "PythonVersion"
-      template_path: "templates/comment1.handlebars"
+      template_path: "templates/PRComment.handlebars"
       comment_title: "AzureCLI-FullTest"
       init_comment: |
-        Azure.azure-cli Full Test testing in progress.
+        Validation for Azure CLI Full Test Starting...
+        Thanks for your contribution!
 cli_common_issues:
   enable: True
   issues:
