--- a/.github/workflows/pypi-azure-cli-testsdk.yml
+++ b/.github/workflows/pypi-azure-cli-testsdk.yml
@@ -8,35 +8,39 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Setup Python
       uses: actions/setup-python@v2.2.2
       with:
         python-version: 3.7
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine virtualenv pip-tools
         
         cd src/azure-cli-testsdk
         python setup.py sdist bdist_wheel
-    - name: Publish package
+
+    - name: Publish package to https://test.pypi.org
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_PASSWORD }}
         repository_url: https://test.pypi.org/legacy/
-    - name: Install dependencies
+        packages_dir: src/azure-cli-testsdk
+
+    - name: Validate Package Installation from Test PyPi
       run: |
-        python3.7 -m pip install --upgrade pip
-        python3.7 -m pip install virtualenv pip-tools
-        pip install --extra-index-url https://test.pypi.org/simple azure-cli-testsdk        
-    - name: Publish package
+        pip install --upgrade --extra-index-url https://test.pypi.org/simple azure-cli-testsdk
+
+    - name: Publish package to https://pypi.org
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI_PASSWORD }}
-    - name: Install dependencies
+        packages_dir: src/azure-cli-testsdk
+
+    - name: Validate Package Installation from PyPi
       run: |
-        python3.7 -m pip install --upgrade pip
-        python3.7 -m pip install virtualenv pip-tools
-        pip install azure-cli-testsdk
+        pip install --upgrade --extra-index-url https://test.pypi.org/simple azure-cli-testsdk
