--- a/.github/workflows/pypi-azure-cli-testsdk.yml
+++ b/.github/workflows/pypi-azure-cli-testsdk.yml
@@ -28,7 +28,7 @@ jobs:
         user: __token__
         password: ${{ secrets.TEST_PYPI_PASSWORD }}
         repository_url: https://test.pypi.org/legacy/
-        packages_dir: src/azure-cli-testsdk
+        packages_dir: src/azure-cli-testsdk/dist
 
     - name: Validate Package Installation from Test PyPi
       run: |
@@ -39,7 +39,7 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_PASSWORD }}
-        packages_dir: src/azure-cli-testsdk
+        packages_dir: src/azure-cli-testsdk/dist
 
     - name: Validate Package Installation from PyPi
       run: |
