--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -23,6 +23,10 @@ parameters:
   displayName: Run test for specific module
   type: string
   default: ''
+- name: jobName
+  displayName: Job name
+  type: string
+  default: 'FullTest'
 
 steps:
   - task: UsePythonVersion@0
@@ -34,7 +38,7 @@ steps:
       set -ev
 
       source env/bin/activate
-
+      echo jobName: ${{ parameters.jobName }}
       echo pythonVersion: ${{ parameters.pythonVersion }}
       echo profile: ${{ parameters.profile }}
       echo fullTest: ${{ parameters.fullTest }}
@@ -69,3 +73,37 @@ steps:
     displayName: "azdev test"
     env:
       ADO_PULL_REQUEST_LATEST_COMMIT: $(System.PullRequest.TargetBranch)
+      PYTHON_VERSION: ${{ parameters.pythonVersion }}
+      JOB_NAME: ${{ parameters.jobName }}
+  - bash: |
+      pipelineTestJson='false'
+      pipelineTestJsonFile='/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json'
+      if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json' ]]; then
+        pipelineTestJson='true'
+      fi
+      echo $pipelineTestJson
+      echo $pipelineTestJsonFile
+      echo "##vso[task.setvariable variable=pipelineTestJson]$pipelineTestJson"
+      echo ${{ variables.pipelineTestJson }}
+
+      pipelineTestXml='false'
+      pipelineTestXmlFile='/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
+      if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_${{ parameters.instance_idx }}.parallel.xml' ]] || [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_${{ parameters.instance_idx }}.serial.xml' ]]; then
+        pipelineTestXml='true'
+      fi
+      echo $pipelineTestXml
+      echo $pipelineTestXmlFile
+      echo "##vso[task.setvariable variable=pipelineTestXml]$pipelineTestXml"
+      echo ${{ variables.pipelineTestXml }}
+  - task: PublishBuildArtifacts@1
+    condition: and(succeededOrFailed(), eq(variables.pipelineTestJson, 'true'))
+    inputs:
+      # /home/cloudtest/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_3.8_latest_1.json
+      PathtoPublish: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json'
+      ArtifactName: 'test_results'
+      publishLocation: 'Container'
+  - task: PublishTestResults@2
+    condition: and(succeededOrFailed(), eq(variables.pipelineTestXml, 'true'))
+    inputs:
+      testResultsFiles: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
+      testRunTitle: 'CLI full test results of instance ${{ parameters.instance_idx }}'
