--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -100,7 +100,7 @@ steps:
     condition: and(succeededOrFailed(), eq(variables.pipelineTestXml, 'true'))
     inputs:
       # /home/cloudtest/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_3.8_latest_1.*.xml
-      PathtoPublish: '$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
+      PathtoPublish: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
       ArtifactName: 'test_results'
       publishLocation: 'Container'
   - task: PublishTestResults@2
