--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -75,6 +75,7 @@ steps:
       ADO_PULL_REQUEST_LATEST_COMMIT: $(System.PullRequest.TargetBranch)
       PYTHON_VERSION: ${{ parameters.pythonVersion }}
       JOB_NAME: ${{ parameters.jobName }}
+      PULL_REQUEST_NUMBER: $(System.PullRequest.PullRequestNumber)
   - bash: |
       pipelineTestJson='false'
       if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/pipeline_result_${{ parameters.pythonVersion }}_${{ parameters.profile }}_${{ parameters.instance_idx }}.json' ]]; then
@@ -96,6 +97,7 @@ steps:
       fi
       echo $pipelineTestSerialXml
       echo "##vso[task.setvariable variable=pipelineTestSerialXml]$pipelineTestSerialXml"
+    condition: succeededOrFailed()
   - task: PublishBuildArtifacts@1
     condition: and(succeededOrFailed(), eq(variables.pipelineTestJson, 'true'))
     inputs:
@@ -122,7 +124,7 @@ steps:
       ArtifactName: 'test_results_xml'
       publishLocation: 'Container'
   - task: PublishTestResults@2
-    condition: and(succeededOrFailed(), eq(variables.pipelineTestXml, 'true'))
+    condition: and(succeededOrFailed(), or(eq(variables.pipelineTestParallelXml, 'true'), eq(variables.pipelineTestSerialXml, 'true')))
     inputs:
       testResultsFiles: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
       testRunTitle: 'CLI full test results of instance ${{ parameters.instance_idx }}'
