[AKS] graduate dual-stack to GA (#25256)

--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -7,6 +7,9 @@ aks create:
       enable_sgxquotehelper:
           rule_exclusions:
           - option_length_too_long
+      load_balancer_managed_outbound_ipv6_count:
+          rule_exclusions:
+          - option_length_too_long
       nat_gateway_idle_timeout:
           rule_exclusions:
           - option_length_too_long
@@ -31,6 +34,9 @@ aks enable-addons:
 aks update:
   parameters:
       disable_secret_rotation:
+          rule_exclusions:
+          - option_length_too_long
+      load_balancer_managed_outbound_ipv6_count:
           rule_exclusions:
           - option_length_too_long
       nat_gateway_idle_timeout:
