remove secret from recording

--- a/src/azure-cli/azure/cli/command_modules/container/tests/latest/recordings/test_container_create_with_acr.yaml
+++ b/src/azure-cli/azure/cli/command_modules/container/tests/latest/recordings/test_container_create_with_acr.yaml
@@ -45,7 +45,7 @@ interactions:
     body: '{"properties": {"containers": [{"name": "clicontainer000002", "properties":
       {"image": "clitestregistry1.azurecr.io/nginx:latest", "resources": {"requests":
       {"memoryInGB": 1.5, "cpu": 1.0}}}}], "imageRegistryCredentials": [{"server":
-      "clitestregistry1.azurecr.io", "username": "clitestregistry1", "password": "qtsA=TxYOyZ8kkhFXWHe7mQbFN7fxiLj"}],
+      "clitestregistry1.azurecr.io", "username": "clitestregistry1", "password": "passplaceholder"}],
       "restartPolicy": "Always", "osType": "Linux"}, "location": "westus", "tags":
       {}}'
     headers:
