--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -933,7 +933,7 @@ jobs:
 
 - job: CheckStyle
   displayName: "Check CLI Style"
-
+  timeoutInMinutes: 120
   pool:
     name: ${{ variables.ubuntu_pool }}
   steps:
