Revert "[DeploymentManager] BREAKING CHANGE: `az deploymentmanager`: Remove command module since it is no longer maintained by service (#25523)"
This reverts commit 5d5ed03485e020edb6f33022b4abc797c6edcc1b.

--- a/scripts/live_test/CLITest.yml
+++ b/scripts/live_test/CLITest.yml
@@ -73,6 +73,8 @@ jobs:
         Target: cosmosdb
       databoxedge:
         Target: databoxedge
+      deploymentmanager:
+        Target: deploymentmanager
       dla:
         Target: dla
       dls:
