--- a/src/azure-cli/azure/cli/command_modules/natgateway/tests/latest/recordings/test_natgateway_empty_create.yaml
+++ b/src/azure-cli/azure/cli/command_modules/natgateway/tests/latest/recordings/test_natgateway_empty_create.yaml
@@ -1,7 +1,7 @@
 interactions:
 - request:
-    body: '{"location": "eastus2", "sku": {"name": "Standard"}, "zones": ["2"], "properties":
-      {"idleTimeoutInMinutes": 4}}'
+    body: '{"location": "eastus2", "properties": {"idleTimeoutInMinutes": 4}, "sku":
+      {"name": "Standard"}, "zones": ["2"]}'
     headers:
       Accept:
       - application/json
@@ -18,24 +18,23 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"name\": \"ng1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1\",\r\n
-        \ \"etag\": \"W/\\\"4f49a358-b4bd-48a2-99cd-093a1c974cc3\\\"\",\r\n  \"type\":
+        \ \"etag\": \"W/\\\"3d8b4114-e550-4f8e-bd82-f17745a36302\\\"\",\r\n  \"type\":
         \"Microsoft.Network/natGateways\",\r\n  \"location\": \"eastus2\",\r\n  \"zones\":
         [\r\n    \"2\"\r\n  ],\r\n  \"properties\": {\r\n    \"provisioningState\":
-        \"Updating\",\r\n    \"resourceGuid\": \"2655aa22-c072-4493-bcb1-8e1481ca113b\",\r\n
+        \"Updating\",\r\n    \"resourceGuid\": \"a63e612b-d16d-4ccf-85e6-fe14b740795b\",\r\n
         \   \"idleTimeoutInMinutes\": 4\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
         \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
       azure-asyncnotification:
       - Enabled
       azure-asyncoperation:
-      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/ca2f74b7-9580-4b19-b287-a41105d51856?api-version=2022-01-01
+      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/a0927d62-b948-42b2-99cf-96699f10cccd?api-version=2022-01-01
       cache-control:
       - no-cache
       content-length:
@@ -43,7 +42,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:27 GMT
+      - Fri, 03 Mar 2023 06:41:47 GMT
       expires:
       - '-1'
       pragma:
@@ -56,7 +55,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - ab476473-519f-4ee1-9b5c-6ed51fcdc8ad
+      - ddff7180-75ba-4589-bd84-b9ed53a4481f
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
     status:
@@ -76,10 +75,9 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/ca2f74b7-9580-4b19-b287-a41105d51856?api-version=2022-01-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/eastus2/operations/a0927d62-b948-42b2-99cf-96699f10cccd?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"status\": \"Succeeded\"\r\n}"
@@ -91,7 +89,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:37 GMT
+      - Fri, 03 Mar 2023 06:41:57 GMT
       expires:
       - '-1'
       pragma:
@@ -108,7 +106,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - d8a08ef3-0216-494e-9a9e-a5838e7d5591
+      - d6c9506b-32b3-49c2-b088-6211b400dcee
     status:
       code: 200
       message: OK
@@ -126,17 +124,16 @@ interactions:
       ParameterSetName:
       - --resource-group --name --location --idle-timeout --zone
       User-Agent:
-      - AZURECLI/2.39.0 azsdk-python-azure-mgmt-network/21.0.1 Python/3.10.6 (Linux-5.15.0-1017-azure-x86_64-with-glibc2.31)
-        VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_4949_0
+      - AZURECLI/2.45.0 (PIP) (AAZ) azsdk-python-core/1.24.0 Python/3.8.10 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1?api-version=2022-01-01
   response:
     body:
       string: "{\r\n  \"name\": \"ng1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/natGateways/ng1\",\r\n
-        \ \"etag\": \"W/\\\"972298ea-2cd9-4be3-9e91-6be159aa1e78\\\"\",\r\n  \"type\":
+        \ \"etag\": \"W/\\\"ef2f2c5a-2a8e-47b6-9962-68f3f108420e\\\"\",\r\n  \"type\":
         \"Microsoft.Network/natGateways\",\r\n  \"location\": \"eastus2\",\r\n  \"zones\":
         [\r\n    \"2\"\r\n  ],\r\n  \"properties\": {\r\n    \"provisioningState\":
-        \"Succeeded\",\r\n    \"resourceGuid\": \"2655aa22-c072-4493-bcb1-8e1481ca113b\",\r\n
+        \"Succeeded\",\r\n    \"resourceGuid\": \"a63e612b-d16d-4ccf-85e6-fe14b740795b\",\r\n
         \   \"idleTimeoutInMinutes\": 4\r\n  },\r\n  \"sku\": {\r\n    \"name\": \"Standard\",\r\n
         \   \"tier\": \"Regional\"\r\n  }\r\n}"
     headers:
@@ -147,9 +144,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Aug 2022 07:36:37 GMT
+      - Fri, 03 Mar 2023 06:41:59 GMT
       etag:
-      - W/"972298ea-2cd9-4be3-9e91-6be159aa1e78"
+      - W/"ef2f2c5a-2a8e-47b6-9962-68f3f108420e"
       expires:
       - '-1'
       pragma:
@@ -166,8 +163,8 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-arm-service-request-id:
-      - 8645e37e-d62e-4da7-a3b9-a87d3979b50b
+      - 653440c5-3385-42e9-987e-d983fadd2d1d
     status:
       code: 200
-      message: ''
+      message: OK
 version: 1
